--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -454,9 +454,9 @@ references:
 - uid: Terrain-Scale
   name: Terrain Scale
   href: documentation/usage/Scale.html
-- uid: Thermal Erosion
-  name: Thermal Erosion
-  href: reference/Nodes/Erosion--ThermalErosion.html
+- uid: Thermal
+  name: Thermal
+  href: reference/Nodes/Erosion--Thermal.html
 - uid: Thousand-Mesas
   name: Thousand Mesas
   href: quickstarts/Thousand-Mesas.html
