--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -558,7 +558,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/interface/Viewport.html",
-          "hash": "pXD7GsrXUuQlucpmPw84VQ=="
+          "hash": "8cRYIfhREir2g28NhldkxQ=="
         }
       },
       "is_incremental": false,
@@ -606,7 +606,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/usage/Building.html",
-          "hash": "39wdJ3Ie7CJCxXd7kXBtQA=="
+          "hash": "eJHvrtsKeYBFXAK15szW/g=="
         }
       },
       "is_incremental": false,
@@ -5027,7 +5027,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--Biome.html",
-          "hash": "j0abTpa2dQGzB71DcqYDbA=="
+          "hash": "iNeZxZklcuVDdKpO6w5qcw=="
         }
       },
       "is_incremental": false,
@@ -5051,7 +5051,19 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--CLUTer.html",
-          "hash": "mjvFsWmJnSCJy8PQfKylzA=="
+          "hash": "38VOugW3KwdSDC71KTLiWg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/Color--ColorFX.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/Color--ColorFX.html",
+          "hash": "eQ4GTtBqNINIKMcEYuv9MA=="
         }
       },
       "is_incremental": false,
@@ -5075,7 +5087,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--Mixer.html",
-          "hash": "T8wg8dPVnzajm+LGn9WM7w=="
+          "hash": "lrB25bwyoQNhBFv97ZNK9Q=="
         }
       },
       "is_incremental": false,
@@ -5095,11 +5107,11 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "reference/Nodes/Color--RGBMixer.md",
+      "source_relative_path": "reference/Nodes/Color--RGBMix.md",
       "output": {
         ".html": {
-          "relative_path": "reference/Nodes/Color--RGBMixer.html",
-          "hash": "jht+56SiaHgTyFQ0aBPAUg=="
+          "relative_path": "reference/Nodes/Color--RGBMix.html",
+          "hash": "5g5QLPhW4BNS9eUu04qsCg=="
         }
       },
       "is_incremental": false,
@@ -5135,7 +5147,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--Synth.html",
-          "hash": "xtUB7eqBgfQ0JiMtCmxNpw=="
+          "hash": "vI3tWFqYvAJSxVyvmsO1Eg=="
         }
       },
       "is_incremental": false,
@@ -5627,7 +5639,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Output--Output.html",
-          "hash": "cR1fiuZicK2/vNOQ7qCz8g=="
+          "hash": "hswIQYGaZsfaCN9abwKRGg=="
         }
       },
       "is_incremental": false,
@@ -5819,7 +5831,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Selector--Curvature.html",
-          "hash": "NoYpoTfJByP4/r2es4F10Q=="
+          "hash": "LXVHXjS3pB4CP5AqzMkssg=="
         }
       },
       "is_incremental": false,
@@ -6047,7 +6059,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/toc.html",
-          "hash": "qT5m4Z9hOeaKxgNa5ZOjqg=="
+          "hash": "OMabGFCK4ad/0W1iZiZAkg=="
         }
       },
       "is_incremental": false,
@@ -6073,6 +6085,11 @@
         "incrementalPhase": "build"
       },
       "processors": {
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
@@ -6080,11 +6097,6 @@
         },
         "ConceptualDocumentProcessor": {
           "can_incremental": true,
-          "incrementalPhase": "build"
-        },
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
