--- a/docs/Web.config
+++ b/docs/Web.config
@@ -8,6 +8,11 @@
         <httpRuntime targetFramework="4.8" />
       </system.Web>
   -->
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".webp" mimeType="image/webp" />
+    </staticContent>
+  </system.webServer>
   <system.web>
     <compilation debug="false" targetFramework="4.8"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
