--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ source/hash.bin
 source/hash.bin
 /_ReSharper.Caches/ReSharperPlatformVs16211_cba82ce4.Gaea-Docs.00
 /.idea
+/_ReSharper.Caches/ReSharperPlatformVs16212_cba82ce4.Gaea-Docs.00
